fix path environment v3

--- a/BizTalk_Deployment_TEST/Jenkinsfile
+++ b/BizTalk_Deployment_TEST/Jenkinsfile
@@ -19,23 +19,23 @@ pipeline {
         //for each stage
         BUILD_SOLUTION_FILE_PATH = "${BUILD_SOLUTION_FILE_PATH}" 
         ////BUILD_LOG_FILE = '\\\\dwbtsweb01\\d\$\\BizTalk\\Jenkins\\LOG\\Build.log'
-        BUILD_LOG_FILE = '\\\\Desktop-tre73rq\\D$\Jenkins\\BizTalk\\LOG\\Build.log'
+        BUILD_LOG_FILE = '\\\\Desktop-tre73rq\\d\$\\Jenkins\\BizTalk\\LOG\\Build.log'
         ////UPGRADE_UPGRADEVERPS_FILE_PATH =  'Kaplan.BizTalk.SRM.CI\\PSScripts\\UpgradeBTDFProductVersion.ps1'
         UPGRADE_UPGRADEVERPS_FILE_PATH =  'Practice_1\\PSScripts\\UpgradeBTDFProductVersion.ps1'
         UPGRADE_GIT_COMMIT_MESSAGE = "${UPGRADE_GIT_COMMIT_MESSAGE}" 
         ////GENERATEMSI_OUTDIR = "\\\\dwbtsweb01\\d\$\\BizTalk\\Jenkins\\MSI\\${GIT_BRANCH_NAME}".replaceAll('origin/','')
-        GENERATEMSI_OUTDIR = "\\\\Desktop-tre73rq\\D$\Jenkins\\BizTalk\\MSI\\${GIT_BRANCH_NAME}".replaceAll('origin/','')
+        GENERATEMSI_OUTDIR = "\\\\Desktop-tre73rq\\d\$\\Jenkins\\BizTalk\\MSI\\${GIT_BRANCH_NAME}".replaceAll('origin/','')
         //COPY_MSI_OUTDIR2 =   "\\\\dwbtsweb02\\d\$\\BizTalk\\Jenkins\\MSI\\${GIT_BRANCH_NAME}".replaceAll('origin/','')
         //COPY_MSI_OUTDIR3 =   "\\\\dwbtsweb03\\d\$\\BizTalk\\Jenkins\\MSI\\${GIT_BRANCH_NAME}".replaceAll('origin/','')
         ////GENERATEMSI_LOG_FILE = '\\\\dwbtsweb01\\d\$\\BizTalk\\Jenkins\\LOG\\GenerateMSI.log'
-        GENERATEMSI_LOG_FILE  =  '\\\\Desktop-tre73rq\\D$\Jenkins\\BizTalk\\GenerateMSI.log'
+        GENERATEMSI_LOG_FILE  =  '\\\\Desktop-tre73rq\\d\$\\Jenkins\\BizTalk\\GenerateMSI.log'
         INSTALL_INSTALLPS_FILE_PATH = 'Practice_1\\PSScripts\\InstallMSI.ps1'
-        INSTALL_LOG_FILE1 = '\\\\Desktop-tre73rq\\D$\Jenkins\\BizTalk\\LOG\\InstallMSI.log'
+        INSTALL_LOG_FILE1 = '\\\\Desktop-tre73rq\\d\$\\Jenkins\\BizTalk\\LOG\\InstallMSI.log'
         //INSTALL_LOG_FILE2 = '\\\\dwbtsweb02\\d\$\\BizTalk\\Jenkins\\LOG\\InstallMSI.log'
         //INSTALL_LOG_FILE3 = '\\\\dwbtsweb03\\d\$\\BizTalk\\Jenkins\\LOG\\InstallMSI.log'
         DEPLOY_DEPLOYMENTPS_FILE_PATH = 'Kaplan.BizTalk.SRM.CI\\PSScripts\\DeployMSI.ps1'
         ////DEPLOY_LOG_FILE1 = "\\\\dwbtsweb01\\d\$\\BizTalk\\Jenkins\\LOG\\Deploy.log"
-        DEPLOY_LOG_FILE1 = "\\\\Desktop-tre73rq\D$\\Jenkins\\BizTalk\\LOG\\Deploy.log"
+        DEPLOY_LOG_FILE1 = "\\\\Desktop-tre73rq\d\$\\Jenkins\\BizTalk\\LOG\\Deploy.log"
         //DEPLOY_LOG_FILE2 = "\\\\dwbtsweb02\\d\$\\BizTalk\\Jenkins\\LOG\\Deploy.log"
         //DEPLOY_LOG_FILE3 = "\\\\dwbtsweb03\\d\$\\BizTalk\\Jenkins\\LOG\\Deploy.log"
         DEPLOY_ENVIRONMENT_SETTINGS_FILE_NAME = "Exported_DevSettings.xml"
