--- a/BizTalk_Deployment_TEST/Jenkinsfile
+++ b/BizTalk_Deployment_TEST/Jenkinsfile
@@ -54,7 +54,8 @@ pipeline {
                 echo 'Upgrading version'
                 bat "powershell.exe -ExecutionPolicy Bypass -File \"" + UPGRADE_UPGRADEVERPS_FILE_PATH + "\" -BTDFProjFilePath \"" + DEPLOYMENT_PROJECT_FILE_PATH + "\" "
                 echo 'Commiting to GIT'
-                bat "git add \"" + DEPLOYMENT_PROJECT_FILE_PATH + "\""
+                //bat "git add \"" + DEPLOYMENT_PROJECT_FILE_PATH + "\""
+                bat "git add ."
                 bat "git commit -m \"" + UPGRADE_GIT_COMMIT_MESSAGE  + "\""
                 bat "git push origin HEAD:" + GIT_BRANCH_NAME
             }
