--- a/BizTalk_Deployment_TEST/Jenkinsfile
+++ b/BizTalk_Deployment_TEST/Jenkinsfile
@@ -54,9 +54,14 @@ pipeline {
                 echo 'Upgrading version'
                 bat "powershell.exe -ExecutionPolicy Bypass -File \"" + UPGRADE_UPGRADEVERPS_FILE_PATH + "\" -BTDFProjFilePath \"" + DEPLOYMENT_PROJECT_FILE_PATH + "\" "
                 echo 'Commiting to GIT'
-                bat "git add \"" + DEPLOYMENT_PROJECT_FILE_PATH + "\""
-                bat "git commit -m \"" + UPGRADE_GIT_COMMIT_MESSAGE  + "\""
-                bat "git push origin HEAD:" + GIT_BRANCH_NAME
+                // bat "git add \"" + DEPLOYMENT_PROJECT_FILE_PATH + "\""
+                // bat "git commit -m \"" + UPGRADE_GIT_COMMIT_MESSAGE  + "\""
+                // bat "git push origin HEAD:" + GIT_BRANCH_NAME
+                script{
+                    sh "git add \"" + DEPLOYMENT_PROJECT_FILE_PATH + "\""
+                    sh "git commit -m \"" + UPGRADE_GIT_COMMIT_MESSAGE  + "\""
+                    sh "git push origin HEAD:" + GIT_BRANCH_NAME
+                }
             }
         }
         stage('Generate MSI') { 
