--- a/BizTalk_Deployment_TEST/Jenkinsfile
+++ b/BizTalk_Deployment_TEST/Jenkinsfile
@@ -57,11 +57,12 @@ pipeline {
                 // bat "git add \"" + DEPLOYMENT_PROJECT_FILE_PATH + "\""
                 // bat "git commit -m \"" + UPGRADE_GIT_COMMIT_MESSAGE  + "\""
                 // bat "git push origin HEAD:" + GIT_BRANCH_NAME
-                script{
-                    sh "git add \"" + DEPLOYMENT_PROJECT_FILE_PATH + "\""
-                    sh "git commit -m \"" + UPGRADE_GIT_COMMIT_MESSAGE  + "\""
-                    sh "git push origin HEAD:" + GIT_BRANCH_NAME
-                }
+                withCredentials([usernamePassword(credentialsId: 'git-pass-credentials-ID', passwordVariable: 'GIT_PASSWORD', usernameVariable: 'GIT_USERNAME')]) {
+                    // sh("git tag -a some_tag -m 'Jenkins'")
+                    // sh('git push https://${GIT_USERNAME}:${GIT_PASSWORD}@<REPO> --tags')
+                    sh("git add \"" + DEPLOYMENT_PROJECT_FILE_PATH + "\"")
+                    sh("git commit -m \"" + UPGRADE_GIT_COMMIT_MESSAGE  + "\"")
+                    sh("git push origin HEAD:" + GIT_BRANCH_NAME)
             }
         }
         stage('Generate MSI') { 
